# kb79_adc_12_drone

./: .clang-format  .drone.yml  .gitignore  add_header  makefile
app/keyboard_freertos/: CMakeLists.txt
app/keyboard_freertos/GCC/: add_header  encrypt_bin.py
app/keyboard_freertos/hpm5300_basic_flash_xip_release/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
app/keyboard_freertos/hpm5300_basic_flash_xip_release/iar_embedded_workbench/: cherryusb_device_hid_keyboard_freertos.custom_argvars  cherryusb_device_hid_keyboard_freertos.json
app/keyboard_freertos/hpm5300_basic_flash_xip_release/segger_embedded_studio/: centauri80.emProject  centauri80.json
app/keyboard_freertos/melgeek/db/: db.c  db.h  db_flash_map.h
app/keyboard_freertos/melgeek/detection/: mg_detection.c  mg_detection.h
app/keyboard_freertos/melgeek/dfu/: dfu.c  dfu.h  dfu_api.c  dfu_api.h  dfu_slave.c  dfu_slave.h
app/keyboard_freertos/melgeek/drivers/: drv_aw20xxx.c  drv_aw20xxx.h  drv_button.c  drv_button.h  drv_dpm.c  drv_dpm.h  drv_encoder.c  drv_encoder.h  drv_is37xx.c  drv_is37xx.h  drv_ws2812.c  drv_ws2812.h
app/keyboard_freertos/melgeek/easy_fifo/: easy_crc.c  easy_crc.h  easy_fifo.c  easy_fifo.h
app/keyboard_freertos/melgeek/factory/: mg_factory.c  mg_factory.h
app/keyboard_freertos/melgeek/hal/: hal_adc.c  hal_adc.h  hal_flash.c  hal_flash.h  hal_gpio.c  hal_gpio.h  hal_hid.c  hal_hid.h  hal_i2c.c  hal_i2c.h  hal_spi.c  hal_spi.h  hal_timer.c  hal_timer.h  hal_uart.c  hal_uart.h  hal_wdg.c  hal_wdg.h  (+1 more)
app/keyboard_freertos/src/: main.c
(+129 files in other folders)
